--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -80,6 +80,21 @@ library(bestcost)
 Load the Rdata file that contains all variables needed to run this script.
 ```{r load data }
 load("../testing/input/data/input_data_for_testing_Rpackage.RData")
+
+prob_dying <- list()
+for(d in c("natural", "total")){
+  for(s in c("male", "female")){
+   prob_dying[[d]][[s]] <-
+     bestcost::get_prob_dying_by_single_age(
+      first_age_pop = first(airqplus_pm_deaths_yll[["pop"]]$age_from...),
+      last_age_pop = last(airqplus_pm_deaths_yll[["pop"]]$age_from...),
+      interval_age_pop = 
+        unique(airqplus_pm_deaths_yll[["pop"]]$age_from... - 
+                 airqplus_pm_deaths_yll[["pop"]]$age_from...) + 1,
+      population_midyear = unlist(airqplus_pm_deaths_yll[["pop"]][, paste0("midyear_population_", s)]),
+      deaths = unlist(airqplus_pm_deaths_yll[["pop"]][, paste0("number_of_deaths_", s)]))
+  }
+}
 ```
 
 
@@ -394,8 +409,8 @@ bestcost_pm_deaths_lifetable_airqplus <-
     erf_shape = gsub("-", "_", airqplus_pm_deaths_yll[["input"]]$calculation_method),
     first_age_pop = first(airqplus_pm_deaths_yll[["pop"]]$age_from...),
     last_age_pop = last(airqplus_pm_deaths_yll[["pop"]]$age_from...),
-    # deaths_male = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_male,
-    # deaths_female = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_female,
+    deaths_male = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_male,
+    deaths_female = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_female,
     prob_natural_death_male = prob_dying[["natural"]][["male"]]$prob_dying,
     prob_natural_death_female = prob_dying[["natural"]][["female"]]$prob_dying,
     prob_total_death_male = prob_dying[["total"]][["male"]]$prob_dying,
@@ -427,6 +442,8 @@ bestcost_pm_deaths_lifetable_geluft <-
     erf_shape = "log_linear",
     first_age_pop = 0,
     last_age_pop = 99,
+    deaths_male = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_male,
+    deaths_female = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_female,
     prob_natural_death_male = lifetable_withPopulation[["male"]]$death_probability_natural,
     prob_natural_death_female = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -461,6 +478,8 @@ bestcost_pm_deaths_lifetable_expDistribution <-
       erf_shape = "log_linear",
       first_age_pop = 0,
       last_age_pop = 99,
+      deaths_male = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_male,
+      deaths_female = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_female,
       prob_natural_death_male = lifetable_withPopulation[["male"]]$death_probability_natural,
       prob_natural_death_female = lifetable_withPopulation[["female"]]$death_probability_natural,
       prob_total_death_male = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -602,30 +621,10 @@ bestcost_pm_yll_exposure_single_year_lifetable_airqplus <-
     info = input_data_mortality$pollutant[2], 
     min_age = if(is.na(input_data_mortality$min_age[2])) NULL else input_data_mortality$min_age[2])
 
-# check_bestcost(result_list_bestcost = bestcost_pm_yll_exposure_single_year_lifetable_airqplus,
-#                result_vector_alternative = c(27742, 14641, 40542))
+check_bestcost(result_list_bestcost = bestcost_pm_yll_exposure_single_year_lifetable_airqplus,
+                result_vector_alternative = c(27742, 14641, 40542)) # GeLuft results
 
 # View(bestcost_pm_yll_exposure_single_year_lifetable_airqplus)
-# View(bestcost_pm_yll_lifetable_geluft)
-
-# Comparison premature-deaths in year of analysis
-deaths_yoa <- tibble(
-  deaths_yoa_airqplus = bestcost_pm_yll_exposure_single_year_lifetable_airqplus[["detailed"]][["interim"]][["premature_deaths_nest"]][[3]]$population_2019,
-  deaths_yoa_geluft = bestcost_pm_yll_lifetable_geluft[["detailed"]][["interim"]][["pop_impact_nest"]][[3]]$population_2020
-  )
-sum(deaths_yoa$deaths_yoa_airqplus[21:100])
-sum(deaths_yoa$deaths_yoa_geluft[21:100])
-# airqplus ca. 6.5 % lower than geluft
-
-
-# Comparison total YLL GeLuft & AirQ+
-yll_yoa <- tibble(
-  yll_yoa_airqplus = bestcost_pm_yll_exposure_single_year_lifetable_airqplus[["detailed"]][["interim"]][["lifeyears_nest"]][[3]]$impact[2:100],
-  yll_yoa_geluft = bestcost_pm_yll_lifetable_geluft[["detailed"]][["interim"]][["lifeyears_nest"]][[3]]$impact
-)
-sum(yll_yoa$yll_yoa_airqplus)
-sum(yll_yoa$yll_yoa_geluft)
-# airqplus ca. 10% higher than geluft
 ```
 
 
@@ -711,6 +710,8 @@ bestcost_pm_yll_lifetable_1rr_geluft <-
       erf_shape = "log_linear",
       first_age_pop = 0,
       last_age_pop = 99,
+      deaths_male = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_male,
+      deaths_female = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_female,
       prob_natural_death_male = lifetable_withPopulation[["male"]]$death_probability_natural,
       prob_natural_death_female = lifetable_withPopulation[["female"]]$death_probability_natural,
       prob_total_death_male = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -722,7 +723,7 @@ bestcost_pm_yll_lifetable_1rr_geluft <-
       min_age = if(is.na(input_data_mortality$min_age[2])) NULL else input_data_mortality$min_age[2])
 
 check_bestcost(result_list_bestcost = bestcost_pm_yll_lifetable_1rr_geluft,
-               result_vector_alternative = c(27742))
+               result_vector_alternative = c(27742)) # GeLuft result
 ```
 
 
@@ -743,6 +744,8 @@ bestcost_pm_yll_lifetable_expDistribution_geluft <-
       erf_shape = "log_linear",
       first_age_pop = 0,
       last_age_pop = 99,
+      deaths_male = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_male,
+      deaths_female = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_female,
       prob_natural_death_male = lifetable_withPopulation[["male"]]$death_probability_natural,
       prob_natural_death_female = lifetable_withPopulation[["female"]]$death_probability_natural,
       prob_total_death_male = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -783,6 +786,8 @@ bestcost_pm_yld_lifetable_geluft  <-
     approach_exposure = "single_year",
     first_age_pop = 0,
     last_age_pop = 99,
+    deaths_male = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_male,
+    deaths_female = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_female,
     prob_natural_death_male = lifetable_withPopulation[["male"]]$death_probability_natural,
     prob_natural_death_female = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -800,7 +805,7 @@ bestcost_pm_yld_lifetable_geluft  <-
 # But disability weight = 1 in the function above, then YLD = YLL 
 # and the result should be identical.
 check_bestcost(result_list_bestcost = bestcost_pm_yld_lifetable_geluft,
-               result_vector_alternative = c(27742, 14641, 40542))
+               result_vector_alternative = c(27742, 14641, 40542)) # GeLuft results
 
 ```
 #### Disability-adjusted lived years (DALY)
@@ -822,6 +827,8 @@ bestcost_pm_daly_lifetable_geluft  <-
     erf_shape = "log_linear",
     first_age_pop = 0,
     last_age_pop = 99,
+    deaths_male = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_male,
+    deaths_female = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_female,
     prob_natural_death_male = lifetable_withPopulation[["male"]]$death_probability_natural,
     prob_natural_death_female = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -1151,6 +1158,8 @@ comparison_deaths_lifetable_delta <-
     erf_shape = "log_linear",
     first_age_pop_1 = 0,
     last_age_pop_1 = 99,
+    deaths_male_1 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_male,
+    deaths_female_1 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_female,
     prob_natural_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_natural,
     prob_natural_death_female_1 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -1160,6 +1169,8 @@ comparison_deaths_lifetable_delta <-
     year_of_analysis_1 = 2019, 
     first_age_pop_2 = 0,
     last_age_pop_2 = 99,
+    deaths_male_2 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_male,
+    deaths_female_2 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_female,
     prob_natural_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_natural,
     prob_natural_death_female_2 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -1194,6 +1205,8 @@ comparison_deaths_lifetable_delta_geo <-
     erf_shape = "log_linear",
     first_age_pop_1 = 0,
     last_age_pop_1 = 99,
+    deaths_male_1 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_male,
+    deaths_female_1 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_female,
     prob_natural_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_natural,
     prob_natural_death_female_1 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -1203,6 +1216,8 @@ comparison_deaths_lifetable_delta_geo <-
     year_of_analysis_1 = 2019, 
     first_age_pop_2 = 0,
     last_age_pop_2 = 99,
+    deaths_male_2 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_male,
+    deaths_female_2= airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_female,
     prob_natural_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_natural,
     prob_natural_death_female_2 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -1242,6 +1257,8 @@ comparison_deaths_lifetable_pif  <-
     erf_shape = "log_linear",
     first_age_pop_1 = 0,
     last_age_pop_1 = 99,
+    deaths_male_1 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_male,
+    deaths_female_1 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_female,
     prob_natural_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_natural,
     prob_natural_death_female_1 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -1251,6 +1268,8 @@ comparison_deaths_lifetable_pif  <-
     year_of_analysis_1 = 2019, 
     first_age_pop_2 = 0,
     last_age_pop_2 = 99,
+    deaths_male_2 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_male,
+    deaths_female_2 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_female,
     prob_natural_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_natural,
     prob_natural_death_female_2 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -1286,6 +1305,8 @@ comparison_deaths_lifetable_pif_geo <-
     erf_shape = "log_linear",
     first_age_pop_1 = 0,
     last_age_pop_1 = 99,
+    deaths_male_1 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_male,
+    deaths_female_1 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_female,
     prob_natural_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_natural,
     prob_natural_death_female_1 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -1295,6 +1316,8 @@ comparison_deaths_lifetable_pif_geo <-
     year_of_analysis_1 = 2019, 
     first_age_pop_2 = 0,
     last_age_pop_2 = 99,
+    deaths_male_2 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_male,
+    deaths_female_2 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_female,
     prob_natural_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_natural,
     prob_natural_death_female_2 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -1347,6 +1370,8 @@ comparison_yll_lifetable_delta  <-
     erf_shape = "log_linear",
     first_age_pop_1 = 0,
     last_age_pop_1 = 99,
+    deaths_male_1 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_male,
+    deaths_female_1 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_female,
     prob_natural_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_natural,
     prob_natural_death_female_1 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -1356,6 +1381,8 @@ comparison_yll_lifetable_delta  <-
     year_of_analysis_1 = 2019, 
     first_age_pop_2 = 0,
     last_age_pop_2 = 99,
+    deaths_male_2 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_male,
+    deaths_female_2 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_female,
     prob_natural_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_natural,
     prob_natural_death_female_2 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -1392,6 +1419,8 @@ comparison_yll_lifetable_delta_geo <-
     erf_shape = "log_linear",
     first_age_pop_1 = 0,
     last_age_pop_1 = 99,
+    deaths_male_1 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_male,
+    deaths_female_1 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_female,
     prob_natural_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_natural,
     prob_natural_death_female_1 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -1401,6 +1430,8 @@ comparison_yll_lifetable_delta_geo <-
     year_of_analysis_1 = 2019, 
     first_age_pop_2 = 0,
     last_age_pop_2 = 99,
+    deaths_male_2 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_male,
+    deaths_female_2 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_female,
     prob_natural_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_natural,
     prob_natural_death_female_2 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -1420,6 +1451,8 @@ check_bestcost(result_list_bestcost = comparison_yll_lifetable_delta_geo ,
                result_vector_alternative = c(31190, 16500, 45472)) # Result on 08 July 2024
 
 # PIF
+# GIVES ERROR: "object 'rr_conc' not found", ALTHOUGH IT IS THERE ####
+## THE SAME FUNCTION IS CALLED ABOVE AND RUNS WITHOUT ERROR
 comparison_yll_lifetable_pif <-
   bestcost::compare_yll_from_lifetable(
     approach_comparison = "pif",
@@ -1435,6 +1468,8 @@ comparison_yll_lifetable_pif <-
     erf_shape = "log_linear",
     first_age_pop_1 = 0,
     last_age_pop_1 = 99,
+    deaths_male_1 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_male,
+    deaths_female_1 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_female,
     prob_natural_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_natural,
     prob_natural_death_female_1 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -1444,6 +1479,8 @@ comparison_yll_lifetable_pif <-
     year_of_analysis_1 = 2019, 
     first_age_pop_2 = 0,
     last_age_pop_2 = 99,
+    deaths_male_2 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_male,
+    deaths_female_2 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_female,
     prob_natural_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_natural,
     prob_natural_death_female_2 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -1480,6 +1517,8 @@ comparison_yll_lifetable_pif_geo <-
     erf_shape = "log_linear",
     first_age_pop_1 = 0,
     last_age_pop_1 = 99,
+    deaths_male_1 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_male,
+    deaths_female_1 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_female,
     prob_natural_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_natural,
     prob_natural_death_female_1 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -1489,6 +1528,8 @@ comparison_yll_lifetable_pif_geo <-
     year_of_analysis_1 = 2019, 
     first_age_pop_2 = 0,
     last_age_pop_2 = 99,
+    deaths_male_2 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_male,
+    deaths_female_2 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_female,
     prob_natural_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_natural,
     prob_natural_death_female_2 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -1532,6 +1573,8 @@ comparison_yld_lifetable_delta  <-
     erf_shape = "log_linear",
     first_age_pop_1 = 0,
     last_age_pop_1 = 99,
+    deaths_male_1 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_male,
+    deaths_female_1 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_female,
     prob_natural_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_natural,
     prob_natural_death_female_1 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -1541,6 +1584,8 @@ comparison_yld_lifetable_delta  <-
     year_of_analysis_1 = 2019, 
     first_age_pop_2 = 0,
     last_age_pop_2 = 99,
+    deaths_male_2 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_male,
+    deaths_female_2 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_female,
     prob_natural_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_natural,
     prob_natural_death_female_2 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -1579,6 +1624,8 @@ comparison_yld_lifetable_delta_geo <-
     erf_shape = "log_linear",
     first_age_pop_1 = 0,
     last_age_pop_1 = 99,
+    deaths_male_1 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_male,
+    deaths_female_1 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_female,
     prob_natural_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_natural,
     prob_natural_death_female_1 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -1588,6 +1635,8 @@ comparison_yld_lifetable_delta_geo <-
     year_of_analysis_1 = 2019, 
     first_age_pop_2 = 0,
     last_age_pop_2 = 99,
+    deaths_male_2 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_male,
+    deaths_female_2 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_female,
     prob_natural_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_natural,
     prob_natural_death_female_2 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -1625,6 +1674,8 @@ comparison_yld_lifetable_pif <-
     erf_shape = "log_linear",
     first_age_pop_1 = 0,
     last_age_pop_1 = 99,
+    deaths_male_1 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_male,
+    deaths_female_1 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_female,
     prob_natural_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_natural,
     prob_natural_death_female_1 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -1634,6 +1685,8 @@ comparison_yld_lifetable_pif <-
     year_of_analysis_1 = 2019, 
     first_age_pop_2 = 0,
     last_age_pop_2 = 99,
+    deaths_male_2 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_male,
+    deaths_female_2 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_female,
     prob_natural_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_natural,
     prob_natural_death_female_2 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -1673,6 +1726,8 @@ comparison_yld_lifetable_pif_geo <-
     erf_shape = "log_linear",
     first_age_pop_1 = 0,
     last_age_pop_1 = 99,
+    deaths_male_1 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_male,
+    deaths_female_1 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_female,
     prob_natural_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_natural,
     prob_natural_death_female_1 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -1682,6 +1737,8 @@ comparison_yld_lifetable_pif_geo <-
     year_of_analysis_1 = 2019, 
     first_age_pop_2 = 0,
     last_age_pop_2 = 99,
+    deaths_male_2 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_male,
+    deaths_female_2 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_female,
     prob_natural_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_natural,
     prob_natural_death_female_2 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -1724,6 +1781,8 @@ comparison_daly_lifetable_delta  <-
     erf_shape = "log_linear",
     first_age_pop_1 = 0,
     last_age_pop_1 = 99,
+    deaths_male_1 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_male,
+    deaths_female_1 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_female,
     prob_natural_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_natural,
     prob_natural_death_female_1 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -1733,6 +1792,8 @@ comparison_daly_lifetable_delta  <-
     year_of_analysis_1 = 2019, 
     first_age_pop_2 = 0,
     last_age_pop_2 = 99,
+    deaths_male_2 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_male,
+    deaths_female_2 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_female,
     prob_natural_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_natural,
     prob_natural_death_female_2 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -1771,6 +1832,8 @@ comparison_daly_lifetable_delta_geo <-
     erf_shape = "log_linear",
     first_age_pop_1 = 0,
     last_age_pop_1 = 99,
+    deaths_male_1 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_male,
+    deaths_female_1 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_female,
     prob_natural_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_natural,
     prob_natural_death_female_1 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -1780,6 +1843,8 @@ comparison_daly_lifetable_delta_geo <-
     year_of_analysis_1 = 2019, 
     first_age_pop_2 = 0,
     last_age_pop_2 = 99,
+    deaths_male_2 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_male,
+    deaths_female_2 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_female,
     prob_natural_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_natural,
     prob_natural_death_female_2 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -1817,6 +1882,8 @@ comparison_daly_lifetable_pif <-
     erf_shape = "log_linear",
     first_age_pop_1 = 0,
     last_age_pop_1 = 99,
+    deaths_male_1 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_male,
+    deaths_female_1 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_female,
     prob_natural_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_natural,
     prob_natural_death_female_1 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -1826,6 +1893,8 @@ comparison_daly_lifetable_pif <-
     year_of_analysis_1 = 2019, 
     first_age_pop_2 = 0,
     last_age_pop_2 = 99,
+    deaths_male_2 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_male,
+    deaths_female_2 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_female,
     prob_natural_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_natural,
     prob_natural_death_female_2 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -1865,6 +1934,8 @@ comparison_daly_lifetable_pif_geo <-
     erf_shape = "log_linear",
     first_age_pop_1 = 0,
     last_age_pop_1 = 99,
+    deaths_male_1 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_male,
+    deaths_female_1 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_female,
     prob_natural_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_natural,
     prob_natural_death_female_1 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -1874,6 +1945,8 @@ comparison_daly_lifetable_pif_geo <-
     year_of_analysis_1 = 2019, 
     first_age_pop_2 = 0,
     last_age_pop_2 = 99,
+    deaths_male_2 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_male,
+    deaths_female_2 = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_female,
     prob_natural_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_natural,
     prob_natural_death_female_2 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_total,
